# tibo

./: .gitmodules  Cargo.toml
ti-basic-optimizer/: Cargo.toml
ti-basic-optimizer/src/: config.rs  data.rs  error_reporting.rs  lib.rs  main.rs
ti-basic-optimizer/src/analyze/: labels.rs  mod.rs
ti-basic-optimizer/src/analyze/control_flow/: failure_paths.rs  graph.rs  labels.rs  mod.rs  parser.rs
ti-basic-optimizer/src/data/: graphviz.rs  mod.rs  partition_map.rs
ti-basic-optimizer/src/data/graph_like/: digraph.rs  mod.rs
ti-basic-optimizer/src/data/intervals/: interval_tree.rs  mod.rs  partition_map.rs
ti-basic-optimizer/src/optimize/: mod.rs
ti-basic-optimizer/src/optimize/control_flow/: label_name.rs  mod.rs
ti-basic-optimizer/src/optimize/expressions/: mod.rs  parenthesis_optimization.rs
ti-basic-optimizer/src/optimize/strategies/: mod.rs
ti-basic-optimizer/src/parse/: expression.rs  mod.rs  program.rs
ti-basic-optimizer/src/parse/commands/: control_flow.rs  delvar_chain.rs  generic.rs  mod.rs  prgm.rs  setupeditor.rs
ti-basic-optimizer/src/parse/components/: binary_operator.rs  data_access.rs  delvar_target.rs  equation_name.rs  function_call.rs  list.rs  list_name.rs  matrix_name.rs  mod.rs  numeric_literal.rs  numeric_var_name.rs  pic_image_name.rs  pseudovariable.rs  rand.rs  store_target.rs  string.rs  string_name.rs  unary_operator.rs  window_var_name.rs
ti-basic-optimizer/src/parse/control_flow/: mod.rs  null_paths.rs
ti-basic-optimizer/src/passes/: closing_parenthesis_elimination.rs  closing_parenthesis_for_loop.rs  mod.rs
tokens/: Cargo.toml  README.md
tokens/src/: lib.rs  ti_connect_file.rs  tokenizer.rs  version.rs  xmlparse.rs
tokens/src/test/: TEST.8xp
(+89 files in other folders)
