[package]
name = "ti-basic-optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
titokens = { path = "../tokens", features = ["itertools", "deku-8xp"] }
tifloats = "2.3.4"
itertools = "0.13.0"
ariadne = "0.4.1"
deku = "0.17.0"

[dev-dependencies]
test-files = { path = "../test-files" }

[features]
round-trip = []