[package]
name = "tibo"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
titokens = { path = "../tokens", features = ["itertools", "deku-8xp"] }
tifloats = { git = "https://github.com/TI-Toolkit/tifloats_lib_rs.git" }
itertools = "0.13.0"
ariadne = "0.4.1"
deku = "0.17.0"
dot-writer = { version = "0.1.3", optional = true }
equidistributed-colors = { version = "0.1.0", optional = true }
test-files = { path = "../test-files", optional = true }

[dev-dependencies]
test-files = { path = "../test-files" }

[features]
round-trip = []
debug-tools = ["test-files", "dot-writer", "equidistributed-colors"]