[package]
name = "titokens"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "TI-Toolkit token sheet parsing."

[features]
itertools = ["dep:itertools"]
deku-8xp = ["dep:deku"]
unicode = []

[dependencies]
lazy_static = "1.5.0"
quick-xml = { version = "0.36.0", features = ["serde", "serialize", "serde-types"] }
serde = { version = "1.0.171", features = ["serde_derive"] }
radix_trie = "0.2"

itertools = { version = "0.13.0", optional = true }
deku = { version="0.17.0", optional = true }